--- a/Registry.UI/Pages/Index.razor
+++ b/Registry.UI/Pages/Index.razor
@@ -1,7 +1,8 @@
 ﻿@page "/"
+@inherits IndexBase
+ 
 
-<h1>Hello, world!</h1>
+<h3>My Registry</h3>
 
 Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
