--- a/Registry.UI/Pages/_Host.cshtml
+++ b/Registry.UI/Pages/_Host.cshtml
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="_content/DevExpress.Blazor/dx-blazor.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/273d0585ea.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <app>
