--- a/Registry.UI/Pages/Index.razor
+++ b/Registry.UI/Pages/Index.razor
@@ -2,7 +2,7 @@
 @inherits IndexBase
 @using Registry.UI.Components
 
-<h3>My Registry</h3>
+<h3>Welcome to my gift registry!</h3>
 
 <DxButton RenderStyle="ButtonRenderStyle.Primary" CssClass="search-button" Click="@Search" IconCssClass="fas fa-search right-space" Text="Search Products">
 </DxButton>
