--- a/Registry.UI/Shared/MainLayout.razor
+++ b/Registry.UI/Shared/MainLayout.razor
@@ -1,4 +1,5 @@
 ﻿@inherits LayoutComponentBase
+@using Radzen.Blazor
 
 <div class="sidebar">
     <NavMenu />
@@ -13,3 +14,4 @@
         @Body
     </div>
 </div>
+<RadzenDialog />
