radzen conversion complete

--- a/Registry.UI/Components/SimpleDialog.razor
+++ b/Registry.UI/Components/SimpleDialog.razor
@@ -2,5 +2,5 @@
 
 <p>@Message</p>
 <div class="center-contents">
-    <RadzenButton Click="@Close" Text="OK" Style="margin-bottom: 10px; width: 150px" />
+    <RadzenButton Click="@Close" Text="OK" class="dialog-ok" />
 </div>
