--- a/Registry.UI/Pages/Index.razor
+++ b/Registry.UI/Pages/Index.razor
@@ -1,7 +1,9 @@
 ﻿@page "/"
 @inherits IndexBase
 @using Registry.UI.Components
-@using Registry.Models 
+@using Registry.Models
+@using Microsoft.AspNetCore.Authorization
+@attribute [Authorize]
 
 <h3>Welcome to my gift registry!</h3>
 
