--- a/Registry.UI/Shared/NavMenu.razor
+++ b/Registry.UI/Shared/NavMenu.razor
@@ -11,7 +11,15 @@
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
                 <span class="oi oi-home" aria-hidden="true"></span> Home
             </NavLink>
+
         </li>
+        <AuthorizeView Roles="Admin">
+            <li class="nav-item px-3">
+                <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
+                    <span class="oi oi-home" aria-hidden="true"></span> Products
+                </NavLink>
+            </li>
+        </AuthorizeView>
     </ul>
 </div>
 
